# halligalli

./: .gitignore  CMakeLists.txt  README.md  STYLE.MD  config.json
src/: doxyfile
src/app/: CMakeLists.txt  halligalli.cpp
src/lib/: Arc.cpp  Arc.hpp  CMakeLists.txt  Constraint.hpp  DataManager.cpp  DataManager.hpp  FullPricer.cpp  FullPricer.hpp  KShortestPricer.cpp  KShortestPricer.hpp  Network.cpp  Network.hpp  Node.cpp  Node.hpp  ObjPricerGFCG.cpp  ObjPricerGFCG.hpp  Path.cpp  Path.hpp  initialize.cpp  initialize.hpp  parse_lp.cpp  parse_lp.hpp  reporting.cpp  reporting.hpp
src/test/: CMakeLists.txt  test_dag_shortest_path.cpp  test_dag_shortest_path_parallel.cpp  test_initializer.cpp  test_lp_solve.cpp  test_network.cpp  test_parse_lp.cpp  test_read_xml.cpp
src/test/res/: example_problem.lp  example_problem.results  test_graph_26.xml  test_graph_shortest_path_1.xml
src/test/res/example_problem_graphs/: ex_1.xml  ex_2.xml
